# grpc-client-rust

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: Cargo.toml
examples/proto/: helloworld.proto
examples/src/: server.rs
proto/: helloworld.proto
src/: client.rs  dynamic_codec.rs  lib.rs  main.rs
src/grpc/: client.rs  dynamic_codec.rs  fn_parser.rs  lib.rs  server.rs
src/grpc/lib/: dynamic_codec.rs  grpc_client.rs
src/grpc_client/: client.rs  mod.rs
src/src/: main.rs
src/src/grpc/: client.rs  client_static.rs  lib.rs
tests/: integration.rs
