[package]
name = "rust"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "main"
path = "src/main.rs"




[build-dependencies]
tonic-prost-build = "*"

[dependencies]
axum = "0.8.8"
tonic = "0.14.4"
tonic-reflection = "0.14.4"
tracing = "0.1.16"
tracing-subscriber = "0.3.22"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower-http = {version = "0.6.8", features = ["trace"]}
prost = "0.14.1"
tonic-prost = "0.14.4"

clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
thiserror = "2.0.18"
http = "1.4.0"

prost-reflect = { version = "0.16.3", features = ["serde"] }

rand = "0.10.0"
tower = "0.5.3"
tokio-stream = "0.1.18"
bytes = "1.11.1"
serde_json = "1.0.149"
