[package]
edition="2024"
licence="AGPLV3"
name="examples"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"


[build-dependencies]
tonic-prost-build = "*"

[dependencies]
axum = "0.8.8"
tonic = "0.14.4"
tonic-reflection = "0.14.4"
tracing = "0.1.16"
tracing-subscriber = "0.3.22"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower-http = {version = "0.6.8", features = ["trace"]}
prost = "0.14.1"
tonic-prost = "0.14.4"
tonic-prost-build = "*"
